# raytracer

./: .gitignore  CMakeLists.txt  Pillow_Image_Generator.py  README.md
src/: camera.h  collection.h  color.h  hit_record.h  hittable.h  hittable_vector.h  interval.h  main.cc  material.h  png.h  ray.h  sphere.h  stb.h  utils.h  vec3.h
src/examples/: scene_1.h  scene_2.h  scene_3.h  scene_4.h  stab.h
